apollo-federation/src/connectors/expand/tests/snapshots/supergraph@product_interface_v0_4.graphql.snap
---
source: apollo-federation/src/connectors/expand/tests/mod.rs
expression: raw_sdl
input_file: apollo-federation/src/connectors/expand/tests/schemas/expand/product_interface_v0_4.graphql
---
schema @link(url: "https://specs.apollo.dev/link/v1.0") @link(url: "https://specs.apollo.dev/join/v0.5", for: EXECUTION) @link(url: "https://specs.apollo.dev/connect/v0.4", for: EXECUTION) @join__directive(graphs: [PRODUCTS_QUERY_PERSON_0, PRODUCTS_QUERY_PRODUCTS_0], name: "link", args: {url: "https://specs.apollo.dev/connect/v0.4", import: ["@connect", "@source"]}) {
  query: Query
}

directive @link(url: String, as: String, for: link__Purpose, import: [link__Import]) repeatable on SCHEMA

directive @join__graph(name: String!, url: String!) on ENUM_VALUE

directive @join__type(graph: join__Graph!, key: join__FieldSet, extension: Boolean! = false, resolvable: Boolean! = true, isInterfaceObject: Boolean! = false) repeatable on ENUM | INPUT_OBJECT | INTERFACE | OBJECT | SCALAR | UNION

directive @join__field(graph: join__Graph, requires: join__FieldSet, provides: join__FieldSet, type: String, external: Boolean, override: String, overrideLabel: String, usedOverridden: Boolean, contextArguments: [join__ContextArgument!]) repeatable on FIELD_DEFINITION | INPUT_FIELD_DEFINITION

directive @join__implements(graph: join__Graph!, interface: String!) repeatable on INTERFACE | OBJECT

directive @join__unionMember(graph: join__Graph!, member: String!) repeatable on UNION

directive @join__enumValue(graph: join__Graph!) repeatable on ENUM_VALUE

directive @join__directive(graphs: [join__Graph!], name: String!, args: join__DirectiveArguments!) repeatable on SCHEMA | OBJECT | INTERFACE | FIELD_DEFINITION

enum link__Purpose {
  """
  SECURITY features provide metadata necessary to securely resolve fields.
  """
  SECURITY
  """EXECUTION features provide metadata necessary for operation execution."""
  EXECUTION
}

scalar link__Import

scalar join__FieldSet

scalar join__FieldValue

input join__ContextArgument {
  name: String!
  type: String!
  context: String!
  selection: join__FieldValue!
}

scalar join__DirectiveArguments

enum join__Graph {
  PRODUCTS_QUERY_PERSON_0 @join__graph(name: "products_Query_person_0", url: "http://ignore")
  PRODUCTS_QUERY_PRODUCTS_0 @join__graph(name: "products_Query_products_0", url: "http://ignore")
}

type Person @join__type(graph: PRODUCTS_QUERY_PERSON_0, key: "id") @join__type(graph: PRODUCTS_QUERY_PRODUCTS_0) {
  id: ID! @join__field(graph: PRODUCTS_QUERY_PERSON_0, type: "ID!") @join__field(graph: PRODUCTS_QUERY_PRODUCTS_0, type: "ID!")
  name: String @join__field(graph: PRODUCTS_QUERY_PERSON_0, type: "String")
}

type Query @join__type(graph: PRODUCTS_QUERY_PERSON_0) @join__type(graph: PRODUCTS_QUERY_PRODUCTS_0) {
  person(id: ID!): Person @join__field(graph: PRODUCTS_QUERY_PERSON_0, type: "Person")
  products: [Product] @join__field(graph: PRODUCTS_QUERY_PRODUCTS_0, type: "[Product]")
}

type Book implements Product @join__type(graph: PRODUCTS_QUERY_PRODUCTS_0) @join__implements(graph: PRODUCTS_QUERY_PRODUCTS_0, interface: "Product") {
  title: String @join__field(graph: PRODUCTS_QUERY_PRODUCTS_0, type: "String")
  author: Person @join__field(graph: PRODUCTS_QUERY_PRODUCTS_0, type: "Person")
  upc: ID! @join__field(graph: PRODUCTS_QUERY_PRODUCTS_0, type: "ID!")
}

type Film implements Product @join__type(graph: PRODUCTS_QUERY_PRODUCTS_0) @join__implements(graph: PRODUCTS_QUERY_PRODUCTS_0, interface: "Product") {
  title: String @join__field(graph: PRODUCTS_QUERY_PRODUCTS_0, type: "String")
  director: Person @join__field(graph: PRODUCTS_QUERY_PRODUCTS_0, type: "Person")
  upc: ID! @join__field(graph: PRODUCTS_QUERY_PRODUCTS_0, type: "ID!")
}

interface Product @join__type(graph: PRODUCTS_QUERY_PRODUCTS_0) {
  upc: ID! @join__field(graph: PRODUCTS_QUERY_PRODUCTS_0, type: "ID!")
  title: String @join__field(graph: PRODUCTS_QUERY_PRODUCTS_0, type: "String")
}
